--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,11 +1,11 @@
 @import "_variable.scss";
 @import "_animation.scss";
 $scale: scaleX(2);
+
 div,
 span {
   content: "";
 }
-
 img {
   pointer-events: none;
 }
@@ -14,20 +14,17 @@ a,
 h1,
 h2,
 h3,
-li,
-p {
+p,
+li
+{
+  color:$white;
   color: $black;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
   letter-spacing: 0.1em;
 }
 h1 {
   font-size: 48px;
 }
-a{
-  position: relative;
-  z-index: 4;
-}
-
 
 header {
   [class^="flex-"],
@@ -86,8 +83,9 @@ header {
         align-items: center;
 
         span {
-          height: 1px;
+          height: 8px;
           width: 100%;
+          opacity: 0.9;
         }
         @for $i from 1 through 4{
           &:nth-child(#{$i}):hover {
@@ -113,234 +111,50 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         opacity: 0.5;
         transition: all 300ms ease;
+        span{
+          height: 16px;
+          width: 0%;
+          padding: 1px 0px;
+          transition: all 300ms;
+          margin-top: -20px;
+          opacity: 0.9;
+          border-radius: 8px;
+        }
         &:hover span{
           width: 100%;
-          padding: 0 8px;
+          padding: 1px 20px;
           background: $black;
         }
-        &:hover{
+        &:hover a{
           opacity: 1;
+          color: $white;
         }
       }
-      &_twitter{
-        span{
-          background: #1da1f2;
+
+      $sns_map: (
+        twitter: $twitter,
+        instagram: $instagram,
+        wantedly: $wantedly
+      );
+
+      @each $sns_name,$sns_color in $sns_map{
+        &_#{$sns_name}{
+          &:hover span{
+            background: $sns_color !important;
+          }
+          &:hover a{
+            color: $sns_color;
+          }
         }
       }
-      &_instagram{
-        span{
-          background: #d6249f;
-        }
-      }
-      &_wantedly{
-        span{
-          background: #21bddb;
-        }
-      }
-      span{
-        height: 1px;
-        width: 0%;
-        padding: 0 0px;
-        transition: all 300ms;
-      }
-    }
-    // .header_menu{
-    //   position: fixed;
-    //   z-index: 2;
-    //   top:0;
-    //   right: -104px;
-    //   height: 100vh;
-    //   width: 160px;
-    //   ul{
-    //     padding-right: 104px;
-    //
-    //     height: 100%;
-    //     position: absolute;
-    //     display: flex;
-    //     flex-direction: column;
-    //     transition: all 500ms;
-    //     justify-content: center;
-    //     &:hover{
-    //       transform: translateX(-208px);
-    //     }
-    //     &:hover li a,&:hover li{
-    //       opacity: 1;
-    //     }
-    //   }
-    //   li{
-    //     transition: all 300ms;
-    //     opacity: 0.1;
-    //     text-align: right;
-    //     margin: 32px 0;
-    //     width: 160px;
-    //     background: $black;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     position: relative;
-    //   }
-    //   a{
-    //
-    //     font-size: 16px;
-    //     display: inline-block;
-    //     opacity: 0;
-    //     color: $white;
-    //     padding: 4px 12px;
-    //   }
-    //   @for $i from 1 through 6{
-    //     li:nth-child(#{$i}) a{
-    //       transition: all 300ms ease #{$i * 100}ms;
-    //     }
-    //   }
-    //   &_twitter:hover{
-    //     background: #1da1f2;
-    //   }
-    //   &_instagram:hover{
-    //     background: #d6249f;
-    //   }
-    //   &_wantedly:hover{
-    //     background: #21bddb;
-    //   }
-    // }
 
-  }
-}
-[class^="content-"],
-[class*=" content-"] {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-[class^="wrap-"],
-[class*=" wrap-"] {
-  position: relative;
-  width: 70%;
-  height: 60%;
-}
-
-main {
-  a {
-    font-size: 32px;
-    display: inline;
-    padding: 8px 32px;
-    background: white;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.26);
-  }
-  .content-1 {
-    .wrap-header {
-      width: 800px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      h1 {
-        position: absolute;
-        margin: auto;
-        left: 0;
-      }
-
-      img {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        right: 0;
-        width: 320px;
-        height: auto;
-      }
-    }
-  }
-
-  .content-2 {
-    .wrap-self {
-
-      h1{
-        position: absolute;
-        top: 30%;
-        margin: auto;
-        display: inline-block;
-        z-index: 2;
-
-        opacity: 0;
-      }
-      img {
-        position: absolute;
-        top: 0;bottom: 0;
-        right: 0;
-        margin: auto;
-        -o-object-fit: cover;
-        object-fit: cover;
-        width: 60%;
-        height: 95%;
-        z-index: 1;
-        opacity: 0;
-      }
-      a {
-        opacity: 0;
-        position: absolute;
-        left: 20%;
-
-        bottom: 0;
-        margin: auto;
-        background: white;
-        display: block;
-        z-index: 3;
-      }
-    }
-  }
-
-  .content-3 {
-    .wrap-works {
-
-      img {
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 90%;
-        width: auto;
-      }
-
-      h1 {
-        opacity: 0;
-        position: absolute;
-        right: 0;
-        top:20%;
-        text-align: right;
-        padding: 40px 0;
-        z-index: 2;
-      }
-
-      a {
-        opacity: 0;
-        position: absolute;
-      }
-
-      .button_wrap {
-        position: absolute;
-        bottom: 30px;
-        right: 50px;
-        z-index: 3;
-      }
-
-      .photos {
-        bottom: 0;
-        right: 0;
-      }
-
-      .works {
-        bottom: 30px;
-        right: 200px;
-      }
     }
   }
 }
-
 footer {
   ul{
     height: 64%;width: auto;
@@ -423,6 +237,102 @@ footer {
     }
   }
 }
+
+.wrapper{
+  position: relative;
+  width: 70%;
+  height: 60%;
+}
+.contents{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+footer {
+  ul{
+    height: 64%;width: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    li{
+      padding: 24px 0;
+    }
+  }
+  .wrap-contact {
+
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+    width: 72vw;
+    height: 72vh;
+    display: grid;
+    grid-template-rows:1fr ;
+    grid-template-columns: 1fr 1fr ;
+
+  }
+  .contact_section{
+    transform: translateX(-100%);
+    background: rgb(248, 248, 248);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+  .contact_icon{
+    transform: translateX(-200%);
+    background: rgb(240, 240, 240);
+    overflow: hidden;
+    @include center;
+    position: relative;
+    top: 0;left: 0;
+    .contact_icon_imgwrap{
+      position: absolute;
+      height: 100%;width: 100%;
+      z-index: 2;
+      transition: all 500ms ease  200ms;
+      @include center;
+    }
+    &_twitter{
+      background: #1da1f2;
+      right: 100%;
+      img{
+        height: 16%;
+        width: auto;
+      }
+    }
+    &_wantedly{
+      background: #21bddb;
+      right: 100%;
+      img{
+        height: 10%;
+        width: auto;
+      }
+    }
+    &_instagram{
+      background: #d6249f;
+      background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+      right: 100%;
+      img{
+        height: 16%;
+        width: auto;
+      }
+    }
+  }
+  .contact_link{
+    background: rgb(232, 232, 232);
+
+    @include center;
+    img{
+      height: 16%;
+      width: 16%;
+    }
+  }
+
+}
 .double {
   transform: $scale;
 }
@@ -488,86 +398,106 @@ $circle_size_1: 150%;
     animation: minus_rotate 7s linear 0s backwards;
   }
 }
+// index -----------------------------------
+main {
+  .content-1 {
+    .wrap-header {
+      width: 800px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-// Photos -----------------------------------
+      h1 {
+        position: absolute;
+        margin: auto;
+        left: 0;
+      }
 
-.photostop_wrap{
-  height: 100%;
-  width: 100%;
-  position: relative;
-  top: 0;left: 0;
-  &_back{
-    height: 80%;width: 80%;
+      img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        right: 0;
+        width: 320px;
+        height: auto;
+      }
+    }
+  }
+  .content-2 {
+    .wrap-self {
+      @include btn-anime;
+      h1{
+        position: absolute;
+        top: 30%;
+        margin: auto;
+        display: inline-block;
+        z-index: 2;
+        opacity: 0;
+      }
+      img {
+        position: absolute;
+        top: 0;bottom: 0;
+        right: 0;
+        margin: auto;
+        -o-object-fit: cover;
+        object-fit: cover;
+        width: 60%;
+        height: 95%;
+        z-index: 1;
+        opacity: 0;
+      }
+      .btn{
+        bottom: -90%;
+      }
+    }
+  }
+
+  .content-3 {
+    .wrap-works {
+
+      @include btn-anime;
+      img {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 90%;
+        width: auto;
+      }
+
+      h1 {
+        opacity: 0;
+        position: absolute;
+        right: 0;
+        top:20%;
+        text-align: right;
+        padding: 40px 0;
+        z-index: 2;
+      }
+
+      a {
+        opacity: 0;
+        position: absolute;
+      }
+
+      .button_wrap {
+        position: absolute;
+        bottom: 30px;
+        right: 50px;
+        z-index: 3;
+      }
+
+      .photos {
+        bottom: 0;
+        right: 0;
+      }
+
+      .works {
+        bottom: 30px;
+        right: 200px;
+      }
+    }
   }
 }
-
-// #photos{
-//   height: 100vh;width: 100vw;
-//
-//   .photostop_wrap{
-//     height: 100%;width: 100%;
-//     display: flex;
-//     justify-content: flex-end;
-//     position: relative;
-//     top: 0;left: 0;
-//     h1{
-//       position: absolute;
-//       top: 40%;
-//       left: 10%;
-//       z-index: 3;
-//     }
-//     &_back{
-//       background: #F7F7F7;
-//       height: 85%;width: 65%;
-//       position: absolute;
-//       bottom: 0;right: 0;
-//
-//     }
-//     &_gallery{
-//       overflow: hidden;
-//       width: 90%;height: 50%;
-//       display: flex;
-//       flex-direction: row;
-//       position: absolute;
-//       top: 0;bottom: 0;right: 0;
-//       margin: auto;
-//       li{
-//         height: 100%;
-//         padding: 0 20px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//       }
-//       img{
-//         box-shadow: 0 2px 5px rgba(0,0,0,0.26);
-//         height: 90%;width: auto;
-//       }
-//     }
-//     &_morebutton{
-//       cursor: pointer;
-//       height: 40px;width: 320px;
-//
-//       position: absolute;
-//       bottom: 40px;left: 40px;
-//       .horizontal{
-//         height: 1px;
-//         width: 300px;
-//         background: $black;
-//         position: absolute;
-//         bottom: 0;
-//         left: 0;
-//       }
-//       .vertical{
-//         position: absolute;
-//         bottom: 0;
-//         right: 20px;
-//         height: 1px;
-//         width: 30px;
-//         background: $black;
-//         transform-origin: right;
-//         transform: rotate(30deg);
-//       }
-//     }
-//   }
-//
-// }
+// Photos -----------------------------------
