--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -172,6 +172,9 @@
     -webkit-transform: rotate(-360deg);
             transform: rotate(-360deg); } }
 
+html {
+  overflow-x: hidden; }
+
 div,
 span {
   content: ""; }
@@ -261,6 +264,9 @@ header .headerwrap .flex-pos {
     header .headerwrap .flex-pos .pos div {
       width: 100%;
       height: 1px; }
+
+header .headerwrap .phone {
+  display: none; }
 
 header .headerwrap .header_menu {
   position: fixed;
@@ -608,18 +614,39 @@ main .content-3 .wrap-works .works {
 @media screen and (max-width: 380px) {
   .circle {
     display: none; }
+  header .headerwrap .desktop {
+    display: none; }
+  header .headerwrap .phone {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    display: block;
+    top: 0;
+    right: 0;
+    background: #5c5c5c;
+    opacity: 0.6;
+    z-index: 20; }
+    header .headerwrap .phone ul {
+      flex-direction: column;
+      justify-content: center;
+      height: 100vh;
+      width: 100vw; }
+      header .headerwrap .phone ul li {
+        opacity: 1; }
+        header .headerwrap .phone ul li a {
+          padding: 20px;
+          color: #ffffff; }
   header .headerwrap .flex-pos {
     width: 10px; }
   main .circle-responsive {
-    display: block;
+    z-index: -1;
     position: fixed;
     right: 0;
     left: 0;
     top: 0;
     bottom: 0;
     margin: auto;
-    width: 300px;
-    height: 300px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center; }
