--- a/pug/includes/_header.pug
+++ b/pug/includes/_header.pug
@@ -25,6 +25,10 @@ mixin menu
 
   nav.header_menu.desktop
     +menu
+  .hamburger
+    span
+    span
+    span
   nav.header_menu.phone
     +menu
 //
