--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -11,6 +11,8 @@
         display: none;
       }
       .hamburger{
+        z-index: 10;
+        padding: 10px;
         display: flex;
         flex-direction:column;
         justify-content: space-between;
@@ -18,7 +20,7 @@
         height: 30px;width: 30px;
         top: 0;
         bottom: 0;
-        left: 10px;
+        left: 0px;
         margin: auto;
 
         span{
@@ -28,27 +30,28 @@
         }
       }
       .phone{
-        transform: translateY(100%);
-        display: block;
-        top: 0;
-        right: 0;
-        background: $black;
-        opacity: 0.6;
-        z-index: 20;
-        ul{
-          flex-direction: column;
-          justify-content: center;
-          height: 100vh;
-          width: 100vw;
-          li{
-            opacity: 1;
-            a{
-              padding: 20px;
-              color: $white;
+              transition: all 300ms ease 0s;
+              transform: translateX(-100%);
+              display: block;
+              top: 0;
+              right: 0;
+              z-index: 20;
+              background: $black;
+              opacity: 0.6;
+              ul{
+                flex-direction: column;
+                justify-content: center;
+                height: 100vh;
+                width: 100vw;
+                li{
+                  opacity: 1;
+                  a{
+                    padding: 20px;
+                    color: $white;
+                  }
+                }
+              }
             }
-          }
-        }
-      }
     }
 
     .headerwrap{
