--- a/pug/includes/_header.pug
+++ b/pug/includes/_header.pug
@@ -26,9 +26,9 @@ mixin menu
   nav.header_menu.desktop
     +menu
   .hamburger
-    span
-    span
-    span
+    span.hamburger-top
+    span.hamburger-middle
+    span.hamburger-bottom
   nav.header_menu.phone
     +menu
 //
