--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -11,7 +11,7 @@
         display: none;
       }
       .hamburger{
-        z-index: 10;
+        z-index: 30;
         padding: 10px;
         display: flex;
         flex-direction:column;
@@ -27,6 +27,10 @@
           height: 1px;
           width: 100%;
           background: $black;
+          transition: all 500ms ease 0s;
+        }
+        &-top,&-bottom{
+          transform-origin: left;
         }
       }
       .phone{
