--- a/stylesheet/_animation.scss
+++ b/stylesheet/_animation.scss
@@ -115,3 +115,29 @@ $move:30px;
 .hamburger-top-after{transform: rotate(45deg);}
 .hamburger-middle-after{transform: translateX(100vw);}
 .hamburger-bottom-after{transform: rotate(-45deg);}
+
+.hamburger-top-anime{
+  animation: hamburger-bar 1000ms ease 100ms forwards;
+}
+.hamburger-middle-anime{
+  animation: hamburger-bar 1000ms ease 200ms forwards;
+}
+.hamburger-bottom-anime{
+  animation: hamburger-bar 1000ms ease 300ms forwards;
+}
+
+@keyframes hamburger-bar{
+  0%{
+    transform: scaleX(1.2);
+  }
+
+  30%{
+    transform: scaleX(0.7);
+  }
+  60%{
+    transform: scaleX(0.5);
+  }
+  100%{
+    transform: scaleX(1);
+  }
+}
