--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -188,6 +188,46 @@
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg); }
 
+.hamburger-top-anime {
+  -webkit-animation: hamburger-bar 1000ms ease 100ms forwards;
+          animation: hamburger-bar 1000ms ease 100ms forwards; }
+
+.hamburger-middle-anime {
+  -webkit-animation: hamburger-bar 1000ms ease 200ms forwards;
+          animation: hamburger-bar 1000ms ease 200ms forwards; }
+
+.hamburger-bottom-anime {
+  -webkit-animation: hamburger-bar 1000ms ease 300ms forwards;
+          animation: hamburger-bar 1000ms ease 300ms forwards; }
+
+@-webkit-keyframes hamburger-bar {
+  0% {
+    -webkit-transform: scaleX(1.2);
+            transform: scaleX(1.2); }
+  30% {
+    -webkit-transform: scaleX(0.7);
+            transform: scaleX(0.7); }
+  60% {
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5); }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1); } }
+
+@keyframes hamburger-bar {
+  0% {
+    -webkit-transform: scaleX(1.2);
+            transform: scaleX(1.2); }
+  30% {
+    -webkit-transform: scaleX(0.7);
+            transform: scaleX(0.7); }
+  60% {
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5); }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1); } }
+
 html {
   overflow-x: hidden; }
 
@@ -651,8 +691,7 @@ main .content-3 .wrap-works .works {
       height: 1px;
       width: 100%;
       background: #5c5c5c;
-      transition: all 500ms ease 0s; }
-    header .headerwrap .hamburger-top, header .headerwrap .hamburger-bottom {
+      transition: all 500ms ease 0s;
       -webkit-transform-origin: left;
               transform-origin: left; }
   header .headerwrap .phone {
