--- a/pug/index.pug
+++ b/pug/index.pug
@@ -34,7 +34,8 @@ html(lang="ja")
               | Who is
               br
               |  Yuki Itoh?
-            img(src="material/main.png" alt="")
+            img.main-pc(src="material/main.png" alt="")
+            img.main-sp(src="material/main_sp.png" alt="")
             a.btn(href="")
               span.bg
               span.text show me more
