--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -107,8 +107,8 @@
       display: none;
     }
     .wrapper{
-      width: 80%;
-      height: 72%;
+      width: 72%;
+      height: 64%;
     }
     .content-1{
       .wrap-header {
@@ -128,16 +128,24 @@
       }
     }
     .content-2{
+      .main-pc{
+        display: none;
+      }
+      .main-sp{
+        display: block;
+      }
       .wrap-self{
         h1{
-          top: auto;
-          left: inherit;
+          top: inherit;
+          right: inherit;
           left: 0;
-          bottom: 10%;
+          bottom: 20%;
         }
         img{
-          width: 100%;
-          height: 100%;
+          bottom: inherit;
+          width: 90%;
+          height: auto;
+          box-shadow: 0 2px 5px rgba(0,0,0,0.26)
         }
         .btn{
           position: absolute;
