--- a/stylesheet/_responsive.scss
+++ b/stylesheet/_responsive.scss
@@ -183,6 +183,9 @@
           position: static;
           padding: 32px 0;
         }
+        h1{
+          text-align: left;
+        }
         .button_wrap{
           width: 90%;
           display: flex;
