--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -809,6 +809,8 @@ main .content-3 .wrap-works .works {
     main .content-3 .wrap-works h1, main .content-3 .wrap-works .button_wrap {
       position: static;
       padding: 32px 0; }
+    main .content-3 .wrap-works h1 {
+      text-align: left; }
     main .content-3 .wrap-works .button_wrap {
       width: 90%;
       display: flex;
